modificando boton primario y agregado boton gitignore

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,9 @@ body {
 }
 
 .btn-primary:hover {
-    background-color: #d69c7c;
+    background-color: #d59f83;
+    cursor: pointer;
+    
 }
 
 
