--- a/scss/estructura/_footer.scss
+++ b/scss/estructura/_footer.scss
@@ -1,26 +1,35 @@
+@use '../temas/variables' as v;
+@use '../temas/mixins' as m;
+
+
 // Estilos footer
+
 .footer {
-    background-color: #F6E6D6;
+    background-color: v.$color-secundario;
     text-align: center;
     padding: 20px;
-    font-family: "Karla", sans-serif;
-    color: #7b7979;
-    font-size: 16px;
-}
+    font-family: v.$fuente-base;
 
-.iconos {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-}
+    p {
+        color: v.$color-texto;
+        font-size: 16px;
+    }
 
-.iconos a img {
-    width: 30px;
-    height: auto;
-    margin: 0 10px;
-    transition: transform 0.3s ease;
-}
+    .iconos {
+        @include m.flex-center;
+        gap: 15px;
 
-.iconos a img:hover {
-    transform: scale(1.1);
+        a {
+            img {
+                width: 30px;
+                height: auto;
+                margin: 0 10px;
+                transition: transform 0.3s ease;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
+            }
+        }
+    }
 }
