--- a/scss/estructura/_header.scss
+++ b/scss/estructura/_header.scss
@@ -1,20 +1,57 @@
-// Estilos de la barra de navegación
+@use '../temas/variables' as v;
+
+
+// Menu navegación
 .navbar {
-    background-color: #F6E6D6;
-    font-family: Poppins;
-}
+    background-color: v.$color-secundario;
+    font-family: v.$fuente-secundaria;
 
-// Hacer que el navbar ocupe todo el ancho y use flexbox
-.navbar-collapse {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
+    // Contenedor principal de la navegación
+    .container-fluid {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
-// Asegurar que los elementos de navegación estén centrados
-.navbar-nav {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    width: 100%;
+    // Logo de la marca
+    .navbar-brand {
+        img {
+            width: 40px;
+            height: 40px;
+        }
+    }
+
+    // Botón de menú hamburguesa (versión móvil)
+    .navbar-toggler {
+        border: none;
+        background: transparent;
+
+        .navbar-toggler-icon {
+            width: 25px;
+            height: 25px;
+        }
+    }
+
+    // Contenedor del menú colapsable
+    .collapse {
+        .navbar-nav {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            gap: 20px;
+
+            .nav-item {
+
+                // Enlaces de navegación
+                .nav-link {
+                    color: v.$color-texto;
+                    font-weight: bold;
+
+                    &:hover {
+                        color: v.$color-principal;
+                    }
+                }
+            }
+        }
+    }
 }
