--- a/scss/estructura/_hero.scss
+++ b/scss/estructura/_hero.scss
@@ -1,25 +1,24 @@
-// Sección hero
+@use '../temas/variables' as v;
+
+// ===================== HERO =====================
+
 .hero {
     text-align: center;
     padding: 50px 20px;
-}
+    animation: fadeInCustom 1s ease forwards;
 
-.titulo {
-    font-family: playfair display;
-    font-size: 42px;
-    color: #D68C63;
-    font-weight: bold;
-}
+    // Título principal del hero
+    .titulo {
+        font-family: v.$fuente-titulo;
+        font-size: 42px;
+        color: v.$color-principal;
+        font-weight: bold;
+    }
 
-// Carrusel
-.carousel-container {
-    width: 80%;
-    margin: auto;
-    padding-bottom: 50px;
-}
-
-// Botón de llamada a la acción
-.call-to-action {
-    text-align: center;
-    margin: 50px 0;
+    // Párrafo de descripción
+    p {
+        color: v.$color-texto;
+        font-family: v.$fuente-base;
+        line-height: 1.6;
+    }
 }
