--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,6 +19,7 @@
 @use 'componentes/botones';
 @use 'componentes/faq';
 @use 'componentes/formulario';
+@use 'componentes/productos';
 
 /* Estilos por página */
 @use 'paginas/inicio';
