--- a/scss/estructura/_header.scss
+++ b/scss/estructura/_header.scss
@@ -5,7 +5,7 @@
 // Menu navegación
 .navbar {
     background-color: v.$color-secundario;
-    font-family: v.$fuente-secundaria;
+    font-family: v.$fuente-titulo;
 
     // Contenedor principal de la navegación
     .container-fluid {
