--- a/scss/generales/_reset.scss
+++ b/scss/generales/_reset.scss
@@ -3,3 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html,
+body {
+    height: 100%;
+    overflow-x: hidden;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
